[package]
name = "solana-kite"
version = "0.2.1"
edition = "2021"
authors = ["Mike MacCana <mike.maccana@gmail.com>"]
description = "High level client-side tools for testing your Solana programs"
license = "MIT"
repository = "https://github.com/solanakite/kite-rust"
homepage = "https://github.com/solanakite/kite-rust"
documentation = "https://docs.rs/solana-kite"
readme = "README.md"
keywords = ["solana", "blockchain", "testing", "client", "utilities"]
categories = [
    "development-tools::testing",
    "api-bindings",
    "cryptography::cryptocurrencies",
]
exclude = ["target/", "test-ledger/", ".DS_Store"]

[dependencies]
# Core Solana dependencies - matching Anchor 0.32.0 requirements
litesvm = "0.7"
solana-account = "2.2.1"
solana-instruction = "2.3.0"
solana-keypair = "2.2"
solana-message = "2.4.0"
solana-program = "2.2"
solana-pubkey = "2.4.0"
solana-signer = "2.2"
solana-transaction = "2.2.3"

# SPL Token dependencies - latest versions
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }

[features]
default = []
# Feature flag for additional testing utilities
testing = []

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "token_operations"
path = "examples/token_operations.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
