[package]
name = "solana-kite"
version = "0.3.0"
edition = "2021"
authors = ["Mike MacCana <mike.maccana@gmail.com>"]
description = "High level client-side tools for testing your Solana programs"
license = "MIT"
repository = "https://github.com/solanakite/kite-rust"
homepage = "https://github.com/solanakite/kite-rust"
documentation = "https://docs.rs/solana-kite"
readme = "README.md"
keywords = ["solana", "blockchain", "testing", "client", "utilities"]
categories = [
    "development-tools::testing",
    "api-bindings",
    "cryptography::cryptocurrencies",
]
exclude = ["target/", "test-ledger/", ".DS_Store"]

[dependencies]
litesvm = "0.11.0"
solana-account = "3.4.0"
solana-instruction = "3.3.0"
solana-keypair = "3.1.2"
solana-message = "3.1.0"
solana-program = "3.0.0"
solana-pubkey = "3.0.0"
solana-signer = "3.0.0"
solana-transaction = "3.1.0"

spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"

[dev-dependencies]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "token_operations"
path = "examples/token_operations.rs"

[[example]]
name = "token_extensions_operations"
path = "examples/token_extensions_operations.rs"

[[example]]
name = "transfer_hook_operations"
path = "examples/transfer_hook_operations.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
